--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"bootstrap": "5.3.8",
 		"bootstrap-icons": "^1.13.1",
 		"dotenv": "^17.2.2",
+		"svelte-dnd-action": "^0.9.65",
 		"tauri-plugin-network-api": "^2.0.5",
 		"tauri-plugin-store-api": "^0.0.0"
 	}
