--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tauri-apps/cli": "2.0.0-rc.18",
+		"@types/bootstrap": "^5.2.10",
 		"@types/node": "^22",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.0.1",
