--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,10 +49,11 @@ jobs:
           node-version: 20
           cache: 'pnpm'
       
-      - uses: actions/setup-java@v4
+      - name: Configurar Java 21
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
 
       - run: pnpm install --frozen-lockfile
 
@@ -63,9 +64,16 @@ jobs:
 
       - run: npx cap sync android
 
+      - name: Dar permissão de execução ao gradlew
+        run: chmod +x android/gradlew
+        
+      - name: Limpar Cache do Gradle
+        run: |
+          cd android
+          ./gradlew clean
+        
       - name: Construir o APK de Debug
         run: |
-          chmod +x android/gradlew
           cd android
           ./gradlew assembleDebug
         
@@ -110,7 +118,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
-      - name: Construir o app Tauri
+      - name: Construir o app Tauri (pulando o build do Svelte)
         run: pnpm tauri build
 
       - name: Salvar o artefato (Windows .msi)
