--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,10 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
+tauri = { version = "2.0.0-rc", features = ["devtools"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.0.0-rc", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-store = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0-rc"
