--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,10 +113,17 @@ jobs:
           path: build/
           
       - name: Instalar dependências do Tauri no Linux
-        if: matrix.platform == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y \
+            pkg-config \
+            libwebkit2gtk-4.1-dev \
+            build-essential \
+            libssl-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
 
       - name: Construir o app Tauri (pulando o build do Svelte)
         run: pnpm tauri build
@@ -129,7 +136,7 @@ jobs:
           path: src-tauri/target/release/bundle/msi/*.msi
 
       - name: Salvar o artefato (Linux .AppImage)
-        if: matrix.platform == 'ubuntu-latest'
+        if: matrix.platform == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
           name: linux-appimage
