--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"tauri:open": "tauri dev --"
+		"tauri:open": "tauri dev --",
+		"tauri": "WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri"
 	},
 	"devDependencies": {
 		"@capacitor/assets": "^3.0.5",
