--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@tailwindcss/vite": "^4.1.16",
 		"@tauri-apps/cli": "2.0.0-rc.18",
 		"@types/bootstrap": "^5.2.10",
 		"@types/node": "^22",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.1.16",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4"
@@ -49,14 +53,13 @@
 		"@capacitor/core": "^7.4.3",
 		"@capacitor/ios": "^7.4.3",
 		"@capacitor/preferences": "^7.0.2",
+		"@iconify/svelte": "^5.1.0",
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/supabase-js": "^2.58.0",
 		"@tauri-apps/api": "^2.0.1",
 		"@tauri-apps/plugin-deep-link": "^2.4.3",
 		"@tauri-apps/plugin-os": "~2.0.0",
 		"@tauri-apps/plugin-store": "^2.4.0",
-		"bootstrap": "5.3.8",
-		"bootstrap-icons": "^1.13.1",
 		"dotenv": "^17.2.2",
 		"sharp": "^0.34.4",
 		"svelte-dnd-action": "^0.9.65",
